# fastapi-template

./: .env.template  .gitignore  .pre-commit-config.yaml  DOCS.md  README.md  alembic.ini  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 22e26baad370_user_role.py  7bd36b0b3dda_create_roles_and_permissions_table.py  df2e9e65b115_create_users_table.py
app/: configs.py  conftest.py  database.py  main.py  main_wsgi.py  models.py  user_roles.json  user_roles.py  utils.py
app/middlewares/: authentications.py
app/models/: roles.py  users.py
app/routers/: authentications.py  healtchecks.py  playgrounds.py
app/schemas/: __init__.py  authentications.py  authorizations.py
app/services/: authentications.py  authorizations.py
app/tests/: test_authentication_middlewares.py  test_authentication_services.py  test_authentications.py  test_authorization_services.py  test_configs.py  test_healthchecks.py  test_models.py  test_utils.py
