[tool.poetry]
name = "rest_template"
version = "0.0.0"
description = ""
authors = ["Aditya Ghaffar <adit.bisa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
a2wsgi = "^1.4.1"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
pytest = "^7.1.2"
requests = "^2.28.1"
pre-commit = "^2.20.0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
