[tool.poetry]
name = "rest_template"
version = "0.0.0"
description = ""
authors = ["Aditya Ghaffar <adit.bisa@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.95.0"
a2wsgi = "^1.6.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.3"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
mariadb = "^1.1.5.post3"
argon2-cffi = "^21.3.0"
alembic = "^1.9.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
gunicorn = "^20.1.0"
pytest = "^7.2.1"
requests = "^2.28.2"
pre-commit = "^3.0.4"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
